--- a/src/app/views/posts/edit.post.hbs
+++ b/src/app/views/posts/edit.post.hbs
@@ -1,12 +1,10 @@
 <div class='row'>
 	<div class="title-container px-0 pb-2 d-flex justify-content-between">
 		<h1>Sửa bài viết</h1>
-		<div class="d-flex align-items-center">
-		</div>
 	</div>
 
 	<div class="list-group p-0">
-		<form id="post-form" method="post" action="edit">
+		<form id="put-form" method="post" action="edit">
 			<div class="mb-3">
 				<label for="title" class="form-label">Chủ đề</label>
 				<input id="title" name="title" type="text" class="form-control" placeholder="Nhập chủ đề bài viết"
@@ -17,8 +15,8 @@
 				<textarea class="form-control" id="content" name="content" rows="5" required>{{post.content}}</textarea>
 			</div>
 			<div class="mb-3 d-flex flex-row-reverse gap-2">
-				<input type="submit" form="post-form" class="btn btn-outline-primary float-end" value="Lưu & Đóng" />
-				<a role="button" href="/" class="btn btn-outline-secondary">Quay lại</a>
+				<input type="submit" form="put-form" class="btn btn-outline-primary float-end" value="Lưu & Đóng" />
+				<a role="button" href="/posts/{{post.id}}" class="btn btn-outline-secondary">Quay lại</a>
 			</div>
 		</form>
 	</div>
