add icon source

--- a/src/app/views/partials/header.hbs
+++ b/src/app/views/partials/header.hbs
@@ -4,5 +4,11 @@
 			<img src="/img/blog.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
 			Thái Thành Nam - 19110049 - Blog
 		</a>
+
+		<div class="d-flex align-items-center float-end">
+			<a href="https://www.svgrepo.com/" class="text-info text-decoration-none">
+				Icon from <strong>SVGRepo</strong>
+			</a>
+		</div>
 	</div>
 </nav>
